fix:some animation improved

--- a/app/globals.css
+++ b/app/globals.css
@@ -33,7 +33,7 @@ body {
   scrollbar-width: none; /* Firefox */
 }
 
-/* @layer utilities {
+@layer utilities {
   .mask-gradient {
     mask-image: linear-gradient(
       to right,
@@ -47,4 +47,4 @@ body {
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(12px);
   }
-} */
+}
